--- a/client/index.html
+++ b/client/index.html
@@ -44,7 +44,7 @@
         async function login() {
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
-            const response = await fetch(`${apiUrl}/login`, {
+            const response = await fetch(`${apiUrl}/auth/login`, { // Thay đổi endpoint
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
