--- a/client/index.html
+++ b/client/index.html
@@ -31,9 +31,11 @@
                 <label for="content">Add Content:</label>
                 <input type="text" id="content" placeholder="Enter content">
             </div>
+            <button id="Account-button">Account Manager</button>
             <button onclick="addData()">Add Data</button>
             <button onclick="fetchData()">Fetch Data</button>
             <div class="data-list" id="data-list"></div>
+
             <button id="logout-button">Logout</button>
         </div>
     </div>
