--- a/client/account.html
+++ b/client/account.html
@@ -39,6 +39,7 @@
                         <th>ID</th>
                         <th>Account Type</th>
                         <th>Username</th>
+                        <th>Status</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
