--- a/client/account.html
+++ b/client/account.html
@@ -12,7 +12,9 @@
     <div class="container">
         <h1>Account Management</h1>
         <button onclick="logout()">Logout</button>
-
+        <input type="file" id="file-input" accept=".csv">
+        <button onclick="processCSV()">Read CSV</button>
+        <pre id="output"></pre>
         <!-- Form to create new account -->
         <div id="create-account">
             <h2>Create Account</h2>
@@ -67,7 +69,7 @@
             </form>
         </div>
     </div>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
     <script src="javascript/adminCurd.js"></script>
 </body>
 
