--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,12 @@
                 <label for="content">Add Content:</label>
                 <input type="text" id="content" placeholder="Enter content">
             </div>
+            <div class="form-group">
+                <label for="list-content">Add List Content:</label>
+                <textarea id="list-content" placeholder="Enter list content, each item on a new line"></textarea>
+            </div>
             <button id="Account-button">Account Manager</button>
+            <button id="Add_listData-button" onclick="addListData()">Add list data</button>
             <button onclick="addData()">Add Data</button>
             <button onclick="fetchData()">Fetch Data</button>
             <div class="data-list" id="data-list"></div>
