Add websocket and updateData

--- a/client/index.html
+++ b/client/index.html
@@ -40,7 +40,7 @@
             <button onclick="addData()">Add Data</button>
             <button onclick="fetchData()">Fetch Data</button>
             <div class="data-list" id="data-list"></div>
-
+            <button id="updateData-button">Update data</button>
             <button id="logout-button">Logout</button>
         </div>
     </div>
