Edit the websocket2

--- a/client/index.html
+++ b/client/index.html
@@ -42,6 +42,8 @@
             <div class="data-list" id="data-list"></div>
             <button id="updateData-button">Update data</button>
             <button id="logout-button">Logout</button>
+            <button onclick="a()">Bas</button>
+
         </div>
     </div>
     <script src="./javascript/index.js"></script>
