The done websocket1

--- a/client/index.html
+++ b/client/index.html
@@ -4,14 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Node.js SQLite Backend</title>
+    <title>AI media solution</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div class="container">
-        <h1>Node.js SQLite Backend</h1>
+        <h1>Connected with BAS</h1>
         <div id="data-section">
+            <div id="data-now"></div>
+            <div id="messages">BAS status: </div>
             <button id="logout-button">Logout</button>
             <button id="Account-button">Account</button>
             <button id="fetch-data-button">Fetch Data</button>
